--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@types/node": "^20.11.26",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
