--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cosmograph/cosmograph": "^1.3.1",
     "@jiaminghi/data-view": "^2.7.3",
     "@types/echarts": "^4.4.3",
     "axios": "^1.4.0",
@@ -17,7 +18,8 @@
     "vue": "^2.6.11",
     "vue-awesome": "^4.0.2",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.26",
